mobile first fixes. no more text overlapping issues

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ button {
 }
 
 div.content {
-  /* margin-left: 200px; */
+  margin-left: 200px;
   padding: 1px 16px;
   height: 1000px;
   color: #1F2833;
@@ -238,7 +238,9 @@ color: black;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  margin-top: 20px;
+  margin-top: 15px;
+  margin-left: 5px;
+  margin-right: 5px;
   box-shadow: 2px 4px #b4b4b4;
 
 }
@@ -287,4 +289,11 @@ height: 30px;
 
 .redText{
   color: #ea3057
+}
+h2 {
+  padding: 5px;
+  display: block;
+}
+i:hover {
+  color: blue;
 }
